--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -13,6 +13,14 @@
 - [Invited Talk-Devi Parikh and Jiasen Lu](#Invited-Talk-Devi-Parikh-and-Jiasen-Lu)
 
 ---
+- Why does a vqa have different answers
+- nocaps: novel object captioning at scale
+- atomic
+- comec
+- ICDAR 2019 Competition on Scene Text Visual Question Answering
+- Sequential Latent Knowledge Selection for Knowledge-grounded Dialog
+
+---
 ## Invited Talk-Sanja Fidler
 Learning Representations of Vision and Language
 - Multimodal Learning: more than one modality as input
@@ -33,62 +41,64 @@ http://wityworks.com/
 
 ---
 ## Spotlight Presentation 1
-- Are we asking the right questions in MovieQA? 
-Previous works did not obtain high accuracy than QA only.
-Wikiword embeddingmodel: SOTA on 4/5 on movieQA categories.
+### Are we asking the right questions in MovieQA? 
+- Previous works did not obtain high accuracy than QA only.
+- Wikiword embeddingmodel: SOTA on 4/5 on movieQA categories.
 
-- Referring expression
-A dataset with depth, images and especially for the spatial relationship
-Applications: generation of expression, understanding
+### Referring expression
+- A dataset with depth, images and especially for the spatial relationship
+- Applications: generation of expression, understanding
 
-- Evalutating text-to-image
-Evalutating is difficult in image captioning
-Is image retieval good? (No)
-BISON dataset for binary picking: good for evaluation.
-Can be used for both image captioning and image retrieval
+### Evalutating text-to-image
+- Evalutating is difficult in image captioning
+- Is image retieval good? (No)
+- BISON dataset for binary picking: good for evaluation.
+- Can be used for both image captioning and image retrieval
 
-- Visual storytelling
-Visual storytelling does not equal to image captioning.
-Each narrative story should have one sequence of anchor words
-SOTA on visual storytelling dataset.
+### Visual storytelling
+- Visual storytelling does not equal to image captioning.
+- Each narrative story should have one sequence of anchor words
+- SOTA on visual storytelling dataset.
 
-- Why does a vqa have different answers
-crowd answers matters
-Novel problem, new dataset, algorithm to learn why different answers arise.
-Connection with VizWiz dataset.
+### Why does a vqa have different answers
+- crowd answers matters
+- Novel problem, new dataset, algorithm to learn why different answers arise.
+- Connection with VizWiz dataset.
 
-- Diversity-accuracy tradeoff in image captioing
-ALLSPICE
-a new metric to evaluate image cpations: accuracy and diversity.
-Tree structure.
-Reinforcement learning hurts diversity.
-Top-k and nucleus are marginally better.
+### Diversity-accuracy tradeoff in image captioing
+- ALLSPICE
+- a new metric to evaluate image cpations: accuracy and diversity.
+- Tree structure.
+- Reinforcement learning hurts diversity.
+- Top-k and nucleus are marginally better.
 
-- nocaps: novel object captioning at scale
-SOTA on COCO dataset.
-Biased coco image captioning dataset.
-Training: coco, open images
-Still a much harder benchmark.
+### nocaps: novel object captioning at scale
+- SOTA on COCO dataset.
+- Biased coco image captioning dataset.
+- Training: coco, open images
+- Still a much harder benchmark.
 
-- Image captioning with versy scarce supervised data: adversarial semi-supervised
-Leveraging unpaired caption data.
-Used GAN to decide the true caption
+### Image captioning with versy scarce supervised data: adversarial semi-supervised
+- Leveraging unpaired caption data.
+- Used GAN to decide the true caption
 
-- 
-faster-r-cnn trained to predict object+attributes in visual genome
-decoupled bbox, region ultra
+### Decoupled Box Proposal and Featurization with Ultrafine-Grained Semantic Labels Improve Image Captioning and Visual Question Answering 
+- faster-r-cnn trained to predict object+attributes in visual genome
+- decoupled bbox, region ultra
+
 ---
 ## Invited Talk-Svetlana Lazabnik
 - A Critical Look at Visual Grounding
 Grounding is fundamental 
+
 ---
 ## Invited Talk-Yejin Choi
 - Can’t Close the Loop without Commonsense Models
-Visual Commonsense dataset (Answer Justification)
-Big gap between human and SOTA methods
-Definition of Common Sense
-ATomic: cases; effects;
-ACL 2019: COMeT
+- Visual Commonsense dataset (Answer Justification)
+- Big gap between human and SOTA methods
+- Definition of Common Sense
+- ATomic: cases; effects;
+- ACL 2019: COMeT
 
 ---
 ## Spotlight Presentation 2
@@ -96,22 +106,17 @@ ACL 2019: COMeT
 - Learning Semantic Sentence Embeddings using Pair-wise Discriminator
 Sentence have different forms.
 - Sequential Latent Spaces for Modeling the Intention During Diverse Image Captioning
-Sequence CVAEs
-Adding a kind of intention model
+Sequence CVAEs; Adding a kind of intention model
 - Reinforcing an Image Caption Generator using Off-line Human Feedback (Sequence CVAEs)
 Improve image captioning model using caption rating dataset
 - Use What You Have: Video retrieval using representations from collaborative experts
-Collaborative experts (a lot of different expert methods)
-We need collaborative experts and also we need all kinds of experts
+Collaborative experts (a lot of different expert methods); We need collaborative experts and also we need all kinds of experts
 
 - ICDAR 2019 Competition on Scene Text Visual Question Answering (Main conference)
-A dataset
-Scene text visual question answering
-A new evaluation metric 
+A dataset; Scene text visual question answering; A new evaluation metric 
 
 - Recognizing and Characterizing Natural Language Descriptions of Visually Complex Images
-Visual complexity, Images with multi-objects.
-Human evaluation: answering time 
+Visual complexity, Images with multi-objects. Human evaluation: answering time 
 
 - Adversarial Learning of Semantic Relevance in Text to Image Synthesis
 Diversity in text to image synthesis
@@ -119,54 +124,60 @@ Diversity in text to image synthesis
 
 ---
 ## Invited Talk Gunhee Kim
-- Audio captioning and knowledge-grounded conversation
-First audio captioning dataset in the wild.
-Video captioning is different from video captioning
-50K 10sec audio-caption pairs
-8 super-categories (72 categories)
-Annotation inteface: word label pairs from audioset as hints
-LSTM with topdown attention and aligned semantic attention  (temporal & semantic attention)
-Do the captions map the audio uniquely?
-What can we do to improve the caption quality? (VGGish, AlighedAtt, TopDown attention)
+### Audio captioning and knowledge-grounded conversation
+- First audio captioning dataset in the wild.
+- Video captioning is different from video captioning
+- 50K 10sec audio-caption pairs
+- 8 super-categories (72 categories)
+- Annotation interface: word label pairs from audioset as hints
+- LSTM with topdown attention and aligned semantic attention  (temporal & semantic attention)
+- Do the captions map the audio uniquely?
+- What can we do to improve the caption quality? (VGGish, AlighedAtt, TopDown attention)
 
-- Sequential Latent Knowledge Selection for Knowledge-grounded Dialog
-s2s model tend to produce non-specific response
-Incorporating knowledge to generate informative response
-Wizard of Wikipedia (WoW) dataset
-Two speakers: Wizard and appretice, pick topic and speak first
-Knowledge selection and Utterance Prediction
-Tracking selection along dialogue can reduce scope of knowledge selection
+### Sequential Latent Knowledge Selection for Knowledge-grounded Dialog
+- s2s model tend to produce non-specific response
+- Incorporating knowledge to generate informative response
+- Wizard of Wikipedia (WoW) dataset
+- Two speakers: Wizard and appretice, pick topic and speak first
+- Knowledge selection and Utterance Prediction
+- Tracking selection along dialogue can reduce scope of knowledge selection
 
 ---
 ## VATEX Challenge
 - [paper link](https://arxiv.org/pdf/1904.03493.pdf)
-41.3K unique video clips, 600 human activities
-Longer sentences than MSR-VTT
-0 duplicated sent rate
-task 1: multilingual video captioning
-task 2: Video-guided machine translation 
-Metrics: addition of four popular metrics
+- 41.3K unique video clips, 600 human activities
+- Longer sentences than MSR-VTT
+- 0 duplicated sent rate
+- task 1: multilingual video captioning
+- task 2: Video-guided machine translation 
+- Metrics: addition of four popular metrics
 
-- Multi-modal information fusion and multi-stage training strategy for video captioning
-Encoder-decoder
-make uses of attributes, attention, region, etc.
-
-Multi-modal Information (appeaance, motion,..., maybe audio)
-
-Multi-stage training strategy (gumble softmax sampling to replace scheduled, self-critical based reinforcement learning)
+### Champion: Multi-modal information fusion and multi-stage training strategy for video captioning
+- Encoder-decoder
+- make uses of attributes, attention, region, etc.
+- Multi-modal Information (appearance, motion,..., maybe audio)
+- Multi-stage training strategy (gumble softmax sampling to replace scheduled, self-critical based reinforcement learning)
 
 ### Runner-up Presentation
-multi-level aspects (Glo bal multimodal features;temporal encoding branch; spatial encoding brach)
-self-critic RL
-VSE
+- multi-level aspects (Glo bal multimodal features;temporal encoding branch; spatial encoding brach)
+- self-critic RL
+- VSE
 
 --- 
 ## LSMDC Challenge
 - [Challenge page](https://sites.google.com/site/describingmovies/home?authuser=0)
-200 videos
-Still a large gap to human performance
-Task 1: multi-clips multi-sentence description generation
-Task 2: fill in the characters 
+- 200 videos
+- Still a large gap to human performance
+- Task 1: multi-clips multi-sentence description generation
+- Task 2: fill in the characters 
+- Task 3: Multi-sentence description with charactor (challenge winner combined task 1 with task 2)
+
+### Honorable mention
+- step 1: assignment
+- step 2: correspondense
+
+### Champion
+- mutual helps; charactor Re-ID in videos; charactor Re-ID in text (BERT)
 
 ---
 ## Invited Talk-Devi Parikh and Jiasen Lu
