--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -181,8 +181,11 @@ Diversity in text to image synthesis
 
 ---
 ## Invited Talk-Devi Parikh and Jiasen Lu
-- V&L --> V ∪ L: Breaking away from task- and dataset-specific vision+language 
+- V&L --> V ∪ L: Breaking away from task- and dataset-specific vision+language
+- Task- and dataset-specific models (multiple problems)
+- First, make multi-modal more effective
 
 
+- Second, general visiolinguistic representations
 
 ---
