--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -19,7 +19,7 @@
 - comec
 - ICDAR 2019 Competition on Scene Text Visual Question Answering
 - Sequential Latent Knowledge Selection for Knowledge-grounded Dialog
-
+- ViLBERT: Pretraining Task-Agnostic Visiolinguistic Representations for Vision-and-Language Tasks
 ---
 ## Invited Talk-Sanja Fidler
 Learning Representations of Vision and Language
