--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -13,6 +13,11 @@
 - [Invited Talk-Devi Parikh and Jiasen Lu](#Invited-Talk-Devi-Parikh-and-Jiasen-Lu)
 
 ---
+⁻ https://github.com/rohitgirdhar/CATER
+- Neural baby talk
+- ShapeGlot: Learning Language for Shape Differentiation
+
+
 - Why does a vqa have different answers
 - nocaps: novel object captioning at scale
 - atomic
