--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -17,6 +17,17 @@
 - Neural baby talk
 - ShapeGlot: Learning Language for Shape Differentiation
 
+- SRNs, scenes, generation or VQA
+
+- Knowledge
+
+- Grounding
+
+- Self-critical　rl
+- Gumble softmax sampling
+
+- Wiki
+- Language
 
 - Why does a vqa have different answers
 - nocaps: novel object captioning at scale
