--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -13,31 +13,7 @@
 - [Invited Talk-Devi Parikh and Jiasen Lu](#Invited-Talk-Devi-Parikh-and-Jiasen-Lu)
 
 ---
-⁻ https://github.com/rohitgirdhar/CATER
-- Neural baby talk
-- ShapeGlot: Learning Language for Shape Differentiation
-
-- SRNs, scenes, generation or VQA
-
-- Knowledge
-
-- Grounding
-
-- Self-critical　rl
-- Gumble softmax sampling
-
-- Wiki
-- Language
-
-- Why does a vqa have different answers
-- nocaps: novel object captioning at scale
-- atomic
-- comec
-- ICDAR 2019 Competition on Scene Text Visual Question Answering
-- Sequential Latent Knowledge Selection for Knowledge-grounded Dialog
-- ViLBERT: Pretraining Task-Agnostic Visiolinguistic Representations for Vision-and-Language Tasks
----
-## Invited Talk-Sanja Fidler
+## Invited Jin-Hwa Kim
 Learning Representations of Vision and Language
 - Multimodal Learning: more than one modality as input
 - Difficulty: different statistical properties
@@ -83,7 +59,7 @@ http://wityworks.com/
 
 ### Diversity-accuracy tradeoff in image captioing
 - ALLSPICE
-- a new metric to evaluate image cpations: accuracy and diversity.
+- a new metric to evaluate image captions: accuracy and diversity.
 - Tree structure.
 - Reinforcement learning hurts diversity.
 - Top-k and nucleus are marginally better.
@@ -123,7 +99,7 @@ Grounding is fundamental
 Sentence have different forms.
 - Sequential Latent Spaces for Modeling the Intention During Diverse Image Captioning
 Sequence CVAEs; Adding a kind of intention model
-- Reinforcing an Image Caption Generator using Off-line Human Feedback (Sequence CVAEs)
+- Reinforcing an Image Caption Generator using Off-line Human Feedback
 Improve image captioning model using caption rating dataset
 - Use What You Have: Video retrieval using representations from collaborative experts
 Collaborative experts (a lot of different expert methods); We need collaborative experts and also we need all kinds of experts
@@ -199,9 +175,20 @@ Diversity in text to image synthesis
 ## Invited Talk-Devi Parikh and Jiasen Lu
 - V&L --> V ∪ L: Breaking away from task- and dataset-specific vision+language
 - Task- and dataset-specific models (multiple problems)
-- First, make multi-modal more effective
 
+#### First, make multi-modal more effective
+- Image Captioning: novel object captioning (nocaps)
+- GVQA 
+- TQA
+- Visual dialog without dialog (Reinforcement two role Visual Dialog)
+- explicit object detectors for image captioning, conception recognition for VQA, ocr for textVQA
 
-- Second, general visiolinguistic representations
+### Second, general visiolinguistic representations
+- Visual Grounding
+- a common model for visual grounding and use them for all downstream work
+- concepual caption dataset,
+- ViLBert
+- MT_VL_FT
+
 
 ---
