--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -1,8 +1,7 @@
 # 3rd Workshop on Closing the Loop Between Vision and Language (CLVL)
 
 ## Indexing:
-- [Opening Remarks](#Opening-Remarks)
-- [Invited Talk-Sanja Fidler](#Invited-Talk-Sanja-Fidler)
+- [Invited Talk-Jin-Hwa-Kim](#Invited-Talk-Jin-Hwa-Kim)
 - [Spotlight Presentation 1](#Spotlight-Presentation-1)
 - [Invited Talk-Svetlana Lazabnik](#Invited-Talk-Svetlana-Lazabnik)
 - [Invited Talk-Yejin Choi](#Invited-Talk-Yejin-Choi)
@@ -13,7 +12,7 @@
 - [Invited Talk-Devi Parikh and Jiasen Lu](#Invited-Talk-Devi-Parikh-and-Jiasen-Lu)
 
 ---
-## Invited Jin-Hwa Kim
+## Invited Talk Jin-Hwa Kim
 Learning Representations of Vision and Language
 - Multimodal Learning: more than one modality as input
 - Difficulty: different statistical properties
