--- a/ICCV_2019/meeting_report/1029.md
+++ b/ICCV_2019/meeting_report/1029.md
@@ -2,47 +2,177 @@
 
 ## Indexing:
 - [Oral 11](#Oral-11)
-- [Poster 11](#Poster-11)
 - [Oral 12B](#Oral-12B)
 - [Poster 12](#Poster-12)
 --
 ## Oral 11
+### Asynchronous Single-Photon 3D Imaging
+- Black Bean
+- Computer Vision in Low Light
+- A system: extreme sensitivity
+- Low-light imaging
+- Time of flight 3D Cameras
+- Single-photon 3D camera
+- capable of extreme dark circumanstances
+- Sunlight
+- using strong sensor is not useful
+- add some block ---
+- if not?
+- key observation
+- higher probability of detecting signal photos after sensor start
+- main idea: asynchronous operation (1000 shifts -> peak easily detected)
+- towards long-range high-resolution 3D cameras (low light)
 
+### Specifying Object Attributes and Relations in Interactive Scene Generation
+- object:class, relationships, size and location, appearance
+- interactive environment
 
+Processes
+- GUI representation 
+- graph convolution 
+- object location,mask
+- segmentation layout
+- appearance vectors
+- residual network 
+- image generation
 
+Training 
+- mask discriminator
+- object discriminator
+- image discriminator
+- counterfactual loss
+- feature matching (NIPS,2016  improved techniques for training GANs)
 
----
-## Poster 11
-### Scene Understanding (**100-107**)
-#### SpaceNet MVOI: A Multi-View Overhead Imagery Dataset
+### PLMP-Point line minimal problems in complete multi-view visibility
+- 3d reconstructions from 2d image
+- calibrated perspective cameras 
+- minimal problem
+- 5 point problem is minimal
+- 3D reconstruction -> definition of minimal
+- Prove: at least 30 problems
+- Tools: nonlinear algebra
+- complete classification
+- 30 complete visibility problem
 
-
-#### SplitNet: Sim2Sim and Task2Task Transfer for Embodied Visual Navigation
-
-
-### 3D From Multiview & Sensors (**108-114**)
-#### Pixel2Mesh++: Multi-View 3D Mesh Generation via Deformation
-
-#### A Differential Volumetric Approach to Multi-View Photometric Stereo
+### SinGAN: Learning a Generative Model from a Single Natural Image
+- single image gan
+- former works only generate texture
+- SinGAN: many tasks (same model, no extra training)
+- different scales, patch discriminator- 
+- multi-scale generator/patch discriminator
+- effect of number of levels
+- user study (paired test-21.4% ; unpaired test-over 40)
+- controllable generation
+- image manipulation
+- super resolution
+- single image animation
 
 ---
 ## Oral 12B
-- Multi-View Geometry, 3D Scene Understanding
-1.1A
-- A Camera That CNNs: Towards Embedded Neural Networks on Pixel Processor Arrays
+### Privacy Preserving Image Queries for Camera Localization 
+- 3d LINE CLOUD MAP 
+- HIDE query feature
+- Very similiar to a CVPR paper
+
+### Calibration Wizard: A Guidance System for Camera Calibration Based on Modelling Geometric and Corner Uncertainty
+- calibration wizard,guide user to move to some pose
+- Get optimal next pose: ...
+- Corner uncertainty: in a novel manner
+
+### Gated2Depth: Real-Time Dense Lidar From Gated Images
+- Lidar for self-driving car
+- Low cost, long range, dense depth
+- From gated image
+- Gated splicing
+- Synthetic and real dataset
+
+### X-Section: Cross-Section Prediction for Enhanced RGB-D Fusion
+- Shape retrieval
+- Multi-Stage Pipeline
+- Depth, binary sihouttes are input to X-Section
+- Enhanced TSDF
+- Reconstrucion on YCB Video
+
+### Learning an Event Sequence Embedding for Dense Event-Based Deep Stereo
+- event-based sensor
+- event-based stereo
+- event FIFO queue 
+- CNN -> evented cameras data -> Stereo
 
 ### Point-Based Multi-View Stereo Network
+- Learning-based MVS
+- Key component: 3d cost-volume
+- Limited: are all these 3d cnns necessary
+- Point MVSNet: point cloud representation
+- Viewed images -> coarse depth map -> point flow -> refined
+- Flow prediction: point flow
+- point hypothesis -> expected offset
+- Process the surface points directly, memory efficiency, iteratively refinement
+
+### Discrete Laplace Operator Estimation for Dynamic 3D Reconstruction
+- Unsynchoronized -> ordered
+- Multi-loss
+- Experimented on synthetic imagery from motion capture
+- Event segmentation
 
 ### Deep Non-Rigid Structure From Motion
+- Object category can be considered as a non-rigid object
+- WSM (2d, 3d, camera) 
+- encoder-decoder, 2d -> 3d, predict M too
+- very impressive results
 
 ### Equivariant Multi-View Networks
+- equivariant CNNs
+- features asv functions on the rotation group
+- G-conv
+- Panoramic scene recognation
 
 ### Interpolated Convolutional Networks for 3D Point Cloud Understanding
+- Interpolated convolution
+- Trilinear interpolation
+- Three brach architecture
 
 ### Revisiting Point Cloud Classification: A New Benchmark Dataset and Classification Model on Real-World Data
-
+- Is the problem closed to be solved?
+- Scene Dataset
+- ScanObjectNN (real scaned object dataset)
+- Benchmarking current work, remains challenging
+- Open problems: handling partiality, background, generalization between CAD and Scan
+- Propose method for the new dataset
+- DGCNN-based method better generalization
 
 ### PointCloud Saliency Maps
+- Saliency Maps for point cloud
+- From point dropping point shifting
+- Point dropping algorithms
+
+### ShellNet: Efficient Point Cloud Convolutional Neural Networks Using Concentric Shells Statistics
+- Shellconv: feature vector: invariance to point order, large receptive field, efficiency 
+- Shellnet: Encorder-decoder
+
+### Unsupervised Deep Learning for Structured Shape Matching
+- Find corresponding point
+
+### Linearly Converging Quasi Branch and Bound Algorithms for Global Rigid Registration
+- Rigid alighment
+- ICP, BnB
+- BnB
+- Lower bound, upper bound
+- Quasi lower bound
+
+### Consensus Maximization Tree Search Revisited
+- NP-hard
+- Non-adjacent path avoidance
+
+### Quasi-Globally Optimal and Efficient Vanishing Point Estimation in Manhattan World
+- VP estimation
+- Manhattan frame and camera frame
+
+### An Efficient Solution to the Homography-Based Relative Pose Problem With a Common Reference Direction
+- Two-view relative pose estimation
+
+### A Quaternion-Based Certifiably Optimal Solution to the Wahba Problem With Outliers
+- Wahba Problem: useful in a lot of occasions
 
 
 ---
