--- a/ICCV_2019/meeting_report/1030.md
+++ b/ICCV_2019/meeting_report/1030.md
@@ -8,7 +8,82 @@
 ## Oral 21A
 - Feature Representations, Similarity Learning
 
+### Sampling-Free Epistemic Uncertainty Estimation Using Approximated Variance Propagation
+- Aleatoric vs epistemic (type of uncertainty)
+- Epistemic uncertainty for large neural networks
+- Very low and stable runtime
 
+### Universal Adversarial Perturbation via Prior Driven Uncertainty Approximation
+- Universal adversarial perturbation
+- Key: how to estimate uncertainty
+
+### Understanding Deep Networks via Extremal Perturbations and Smooth Masks
+- A method seems better than grad-cam
+- Extremal pertubations
+
+### Unsupervised Pre-Training of Image Features on Non-Curated Data
+- Learning representations
+- Unsupervised pre-training
+- RotNet, deepcluster
+- deeper cluster
+
+### Learning Local Descriptors With a CDF-Based Dynamic Soft Margin
+- triplet loss for descriptor learning 
+- problem with static hard margin
+- static soft margin
+- Solution: dynamic soft margin
+- vs. hardnet (2017)
+
+### Bayes-Factor-VAE: Hierarchical Bayesian Deep Auto-Encoder Models for Factor Disentanglement
+- unsupervised representation learning
+- Factor-VAE (2018)
+- complex model tend to explore prior 
+
+### Linearized Multi-Sampling for Differentiable Image Transformation
+- Optimizing to align images
+- Pitfalls of bilinear sampling
+- Better gradients for linear
+- Leads to better classification
+
+### AdaTransform: Adaptive Data Transformation
+- Test data may have variations caused by purtubation
+- Data augmentation
+- Increasing data variation in training, decrease in the test period
+
+### CARAFE: Content-Aware ReAssembly of FEatures
+- Feature upsampling
+- current: content-unaware, limited fov, computation cost
+- kernel prediction module
+- capture information of object shape
+
+### AFD-Net: Aggregated Feature Difference Learning for Cross-Spectral Image Patch Matching
+- Cross-spectral image patches matching
+- Previous word do not use low-level featuer,
+- Propose: aggregate feature differences, metric learning
+
+### Deep Joint-Semantics Reconstructing Hashing for Large-Scale Unsupervised Cross-Modal Retrieval
+- image-text cross-modal retrival
+- DJSRH
+- every component contributes to the final result
+
+### Unsupervised Neural Quantization for Compressed-Domain Similarity Search
+- compress-domiain similarity search
+- encoder-decoder, to latentcodebooks
+- Gumble-softmax
+
+### Siamese Networks: The Tale of Two Manifolds	
+- Problem of siamese network
+
+### Learning Combinatorial Embedding Networks for Deep Graph Matching
+- Graph Matching
+- Formulated as quadratic --- > NP hard
+- Permutation loss
+- Cross-graph conv
+
+### Fashion Retrieval via Graph Reasoning Networks on a Similarity Pyramid
+- Global similarity is disturbed by occlusions, misalignemnt
+- Multi-scale, weighted sum
+- Local and global similarity
 
 ---
 ## Poster 21
